--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,19 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["invoice", "billing", "nodejs", "express", "mongodb"],
+  "keywords": [
+    "invoice",
+    "billing",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
