--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -37,41 +39,44 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@sendgrid/mail": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.6.2",
+    "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cors": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "latest",
     "embla-carousel-react": "8.5.1",
+    "express": "latest",
+    "framer-motion": "latest",
+    "fs": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.454.0",
+    "mongoose": "latest",
     "next": "15.2.4",
     "next-themes": "latest",
+    "path": "latest",
+    "pdfkit": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
+    "recoil": "^0.7.7",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@emotion/is-prop-valid": "latest",
-    "framer-motion": "latest",
-    "express": "latest",
-    "cors": "latest",
-    "mongoose": "latest",
-    "dotenv": "latest",
-    "bcryptjs": "latest",
-    "jsonwebtoken": "latest",
-    "fs": "latest",
-    "path": "latest",
-    "pdfkit": "latest",
-    "@sendgrid/mail": "latest",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
